# internet-identity

./: Cargo.toml  internet_identity.wasm
.github/actions/check-build/: action.yml
.github/workflows/: canister-tests.yml
backend-tests/: backend-tests.hs
demos/selenium-test-app/: Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  hello.did  lib.rs  package-lock.json  package.json  selenium-test-app.did  selenium-test-app.wasm  selenium_test_app.wasm  webpack.config.js
demos/selenium-test-app/src/: index.html  main.js
demos/test-app/: test_app.wasm
dfx-docker/: Dockerfile  dfx.json  run_canisters.sh
docker-test-env/: docker-compose.yml
docker-test-env/dfx-docker/: Dockerfile  dfx.json
docker-test-env/reverse_proxy/: README.md  nginx.conf
scripts/: bootstrap
src/: lib.rs
src/canister_tests/: Cargo.toml
src/canister_tests/src/: api.rs  certificate_validation.rs  framework.rs  tests.rs
src/frontend/src/flows/: promptUserNumber.ts
src/frontend/src/flows/addDevice/welcomeView/: registerTentativeDevice.ts
src/frontend/src/flows/authenticate/: index.ts  postMessageInterface.ts  validateDerivationOrigin.ts
src/frontend/src/flows/login/: unknownAnchor.ts
src/frontend/src/test-e2e/: selenium.test.ts  util.ts  views.ts
src/internet_identity/src/: http.rs  main.rs
