[package]
name = "canister_tests"
version = "0.1.0"
edition = "2018"

[net]
git-fetch-with-cli = true   # use the `git` executable for git operations

[dev-dependencies]
base64 = "0.13.0"
flate2 = "1.0"
itertools = "0.10.3"
lazy_static = "1.4"
regex = "1.5.6"
serde = "1"
serde_cbor = "0.11"
serde_bytes = "0.11"
sha2 = "0.10"

internet_identity_interface = { path = "../internet_identity_interface" }

# All IC deps
candid = "0.7"
ic-agent = "0.17.0"
ic-cdk = "0.5"
ic-crypto-tree-hash = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "8c44bc3766b1e02547d92f9f56d9a193d95af8bf" }
ic-crypto-utils-threshold-sig-der = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "8c44bc3766b1e02547d92f9f56d9a193d95af8bf" }
ic-types = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "8c44bc3766b1e02547d92f9f56d9a193d95af8bf" }
ic-error-types = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "8c44bc3766b1e02547d92f9f56d9a193d95af8bf" }
ic-state-machine-tests = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "8c44bc3766b1e02547d92f9f56d9a193d95af8bf" }
