[package]
name = "canister_tests"
version = "0.1.0"
edition = "2018"

[net]
git-fetch-with-cli = true   # use the `git` executable for git operations

[dev-dependencies]
base64 = "0.13.0"
flate2 = "1.0"
lazy_static = "1.4"
regex = "1.5.6"
serde = "1"
serde_cbor = "0.11"
serde_bytes = "0.11"
sha2 = "0.10"

internet_identity_interface = { path = "../internet_identity_interface" }

# All IC deps
candid = "0.7"
ic-cdk = "0.5"
sdk-ic-types = { version = "0.3", package = "ic-types" }
ic-interfaces = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "cfe6d690751dfa7ae4aff67e45c84c57ba53705b" }
ic-types = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "cfe6d690751dfa7ae4aff67e45c84c57ba53705b" }
ic-certified-vars = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "cfe6d690751dfa7ae4aff67e45c84c57ba53705b" }
ic-crypto-internal-basic-sig-iccsa = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "cfe6d690751dfa7ae4aff67e45c84c57ba53705b" }
ic-error-types = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "cfe6d690751dfa7ae4aff67e45c84c57ba53705b" }
ic-state-machine-tests = { git = "ssh://git@gitlab.com/dfinity-lab/public/ic.git", rev = "cfe6d690751dfa7ae4aff67e45c84c57ba53705b" }
